--- a/index.html
+++ b/index.html
@@ -12,5 +12,47 @@
     />
     <title>Desafio Portifólio</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <section class="bg-intro">
+        <header class="info">
+          <div class="profile">
+            <img src="/assets/images/Avatar.png" alt="" />
+            <p class="gray-200">
+              Hello World! Meu nome é <span>Alexandre Barbosa</span> e sou
+            </p>
+            <h1 class="gray-100">Desenvolvedor Fullstack</h1>
+            <p class="gray-300">
+              Transformo necessidades em aplicações reais, evolventes e
+              funcionais. Desenvolvo sistemas através da minha paixão pela
+              tecnologia, contribuindo com soluções inovadoras e eficazes para
+              desafios complexos.
+            </p>
+          </div>
+          <div class="tecnologias">
+            <ul>
+              <li><img src="assets/icons/GitHub.svg" alt="" />GitHub</li>
+              <li><img src="assets/icons/HTML.svg" alt="icone html" />HTML</li>
+              <li><img src="assets/icons/CSS.svg" alt="icone css" />CSS</li>
+              <li>
+                <img
+                  src="assets/icons/JavaScript.svg"
+                  alt="icone JavaScript"
+                />JavaScript
+              </li>
+              <li>
+                <img src="assets/icons/React.svg" alt="icone React" />React
+              </li>
+              <li>
+                <img
+                  src="assets/icons/Node.js.svg"
+                  alt="icone Node.js"
+                />Node.js
+              </li>
+            </ul>
+          </div>
+        </header>
+      </section>
+    </div>
+  </body>
 </html>
