terminada a seção dos projetos em destaques

--- a/index.html
+++ b/index.html
@@ -51,7 +51,107 @@
               </li>
             </ul>
           </div>
+          <img
+            src="assets/icons/CaretDoubleDown.svg"
+            alt="double arrow dwo"
+            id="arrow"
+          />
         </header>
+      </section>
+      <section class="destaques">
+        <div class="secondtittle">
+          <p>Meu trabalho</p>
+          <h2>Veja os projetos em destaque</h2>
+        </div>
+        <div class="projects-grid">
+          <article class="project-card" id="project-1">
+            <div class="card-media">
+              <img
+                src="assets/images/Thumbnail_Project-01.png"
+                alt="Projeto Travelgram"
+              />
+            </div>
+            <div class="card-content">
+              <h3>Travelgram</h3>
+              <p>
+                Rede social onde as pessoas mostram os registros de suas viagens
+                pelo mundo
+              </p>
+            </div>
+          </article>
+
+          <article class="project-card" id="project-2">
+            <div class="card-media">
+              <img
+                src="assets/images/Thumbnail_Project-02.png"
+                alt="Projeto Tech News"
+              />
+            </div>
+            <div class="card-content">
+              <h3>Tech News</h3>
+              <p>
+                Homepage de um portal de notícias sobre a área de tecnologia
+              </p>
+            </div>
+          </article>
+
+          <article class="project-card" id="project-3">
+            <div class="card-media">
+              <img
+                src="assets/images/Thumbnail_Project-03.png"
+                alt="Projeto Receita"
+              />
+            </div>
+            <div class="card-content">
+              <h3>Página de receita</h3>
+              <p>Página com o passo a passo de uma receita para cupcakes</p>
+            </div>
+          </article>
+
+          <article class="project-card" id="project-4">
+            <div class="card-media">
+              <img
+                src="assets/images/Thumbnail_Project-04.png"
+                alt="Projeto Zingen"
+              />
+            </div>
+            <div class="card-content">
+              <h3>Zingen</h3>
+              <p>
+                Landing Page completa e responsiva de um aplicativo de Karaokê
+              </p>
+            </div>
+          </article>
+
+          <article class="project-card" id="project-5">
+            <div class="card-media">
+              <img
+                src="assets/images/Thumbnail_Project-05.png"
+                alt="Projeto Refund"
+              />
+            </div>
+            <div class="card-content">
+              <h3>Refund</h3>
+              <p>Um sistema para pedido e acompanhamento de reembolso</p>
+            </div>
+          </article>
+
+          <article class="project-card" id="project-6">
+            <div class="card-media">
+              <img
+                src="assets/images/Thumbnail_Project-06.png"
+                alt="Projeto Turismo"
+              />
+            </div>
+            <div class="card-content">
+              <h3>Página de turismo</h3>
+              <p>
+                Página com as principais informações para quem quer viajar para
+                Busan
+              </p>
+            </div>
+          </article>
+        </div>
       </section>
     </div>
   </body>
