--- a/index.html
+++ b/index.html
@@ -153,6 +153,29 @@
           </article>
         </div>
       </section>
+      <section class="myservices">
+        <div class="secondtittle">
+          <p>Meus serviços</p>
+          <h2>Como posso ajudar o seu negócio</h2>
+        </div>
+        <div class="container-bloco">
+          <div class="bloco">
+            <img src="assets/icons/Devices.svg" alt="" />
+            <h3>Websites e Aplicativos</h3>
+            <p>Desenvolvimento de interfaces</p>
+          </div>
+          <div class="bloco">
+            <img src="assets/icons/HardDrives.svg" alt="" />
+            <h3>API e banco de dados</h3>
+            <p>Criação de serviços do sistema</p>
+          </div>
+          <div class="bloco">
+            <img src="assets/icons/Infinity.svg" alt="" />
+            <h3>DevOps</h3>
+            <p>Gestão e infraestrutura da aplicação</p>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
