finalizado projeto portifólio

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </p>
             <h1 class="gray-100">Desenvolvedor Fullstack</h1>
             <p class="gray-300">
-              Transformo necessidades em aplicações reais, evolventes e
+              Transformo necessidades em aplicações reais, envolventes e
               funcionais. Desenvolvo sistemas através da minha paixão pela
               tecnologia, contribuindo com soluções inovadoras e eficazes para
               desafios complexos.
@@ -174,6 +174,51 @@
             <h3>DevOps</h3>
             <p>Gestão e infraestrutura da aplicação</p>
           </div>
+        </div>
+      </section>
+      <section class="contact">
+        <div class="text-contact">
+          <p>Contato</p>
+          <h2>Gostou do meu trabalho?</h2>
+          <p>Entre em contato ou acompanhe as minhas redes sociais!</p>
+        </div>
+        <div class="container-box">
+          <a href="#" class="contact-box">
+            <div class="left-content">
+              <img src="assets/icons/LinkedinLogo.svg" alt="icone linkedin" />
+              <span>Linkedin</span>
+            </div>
+            <div class="arrowright">
+              <img src="assets/icons/ArrowUpRight.svg" alt="seta" />
+            </div>
+          </a>
+          <a href="#" class="contact-box">
+            <div class="left-content">
+              <img src="assets/icons/InstagramLogo.svg" alt="icone linkedin" />
+              <span>Instagram</span>
+            </div>
+            <div class="arrowright">
+              <img src="assets/icons/ArrowUpRight.svg" alt="seta" />
+            </div>
+          </a>
+          <a href="#" class="contact-box">
+            <div class="left-content">
+              <img src="assets/icons/GithubLogo.svg" alt="icone linkedin" />
+              <span>GitHub</span>
+            </div>
+            <div class="arrowright">
+              <img src="assets/icons/ArrowUpRight.svg" alt="seta" />
+            </div>
+          </a>
+          <a href="#" class="contact-box">
+            <div class="left-content">
+              <img src="assets/icons/EnvelopeSimple.svg" alt="icone linkedin" />
+              <span>E-mail</span>
+            </div>
+            <div class="arrowright">
+              <img src="assets/icons/ArrowUpRight.svg" alt="seta" />
+            </div>
+          </a>
         </div>
       </section>
     </div>
