tentativa 2 das img background

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <section class="bg-intro">
         <header class="info">
           <div class="profile">
-            <img src="assets/images/Avatar.png" alt="" />
+            <img src="../assets/images/Avatar.png" alt="" />
             <p class="gray-200">
               Hello World! Meu nome é <span>Alexandre Barbosa</span> e sou
             </p>
